[gd_scene load_steps=5 format=3 uid="uid://cn3iklr2hbtr3"]

[ext_resource type="Script" path="res://scenes/Hud.gd" id="1_ap7uf"]
[ext_resource type="Texture2D" uid="uid://loi6c1me1rme" path="res://assets/coin.png" id="2_hl2h4"]
[ext_resource type="Theme" uid="uid://b2viljn765xjf" path="res://default_theme.tres" id="3_hhjvm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ym8rk"]
bg_color = Color(0.952941, 0.384314, 0.435294, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_ap7uf")

[node name="BottomBar" type="MarginContainer" parent="."]
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 20

[node name="Container" type="HBoxContainer" parent="BottomBar"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="BottomBar/Container"]
custom_minimum_size = Vector2(400, 18)
layout_mode = 2

[node name="HealthBar" type="ProgressBar" parent="BottomBar/Container/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_ym8rk")
value = 100.0
show_percentage = false

[node name="HealthBarLabel" type="Label" parent="BottomBar/Container/MarginContainer/HealthBar"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 400.0
offset_bottom = 17.0
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 12
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TopBar" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_top = 20

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="TopBar/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_hl2h4")
stretch_mode = 3

[node name="CoinCount" type="Label" parent="TopBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_hhjvm")
theme_override_constants/line_spacing = 0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
